--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.5+1
   intl: ^0.19.0
+  http: ^1.5.0
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
