--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.19.0
   http: ^1.5.0
   flutter_bloc: ^9.1.1
+  google_fonts: ^6.3.2
 
 dev_dependencies:
   flutter_test:
