--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.5.0
   flutter_bloc: ^9.1.1
   google_fonts: ^6.3.2
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
