Create group changes
- add create group feature

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   google_fonts: ^6.3.2
   flutter_secure_storage: ^9.2.4
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
