--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   dotted_border: ^2.1.0
   flutter_contacts: ^1.1.9
   permission_handler: ^11.3.1
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
