--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   google_fonts: ^6.3.2
   flutter_secure_storage: ^9.2.4
   dotted_border: ^2.1.0
+  flutter_contacts: ^1.1.9
+  permission_handler: ^11.3.1
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
