--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_contacts: ^1.1.9
   permission_handler: ^11.3.1
   flutter_spinkit: ^5.2.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
